--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admParameterCategory/listAdmParameterCategory.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admParameterCategory/listAdmParameterCategory.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+	xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header">
 </head>
 <body>
@@ -11,12 +10,13 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formListAdmPage" action="#" th:action="@{/private/admPageView/edit}" method="get" th:object="${bean}">
+	<form id="formListAdmParameterCategory" style="padding: 5px;" action="#" 
+		th:action="@{/private/admin/admParameterCategoryView/edit}" method="get" th:object="${bean}">
 		
 		<div class="card">
 			<div class="card-header" 
 				style="font-weight: bold;font-size: large;">				
-				<span th:text="#{listAdmPage.title}" id="formTitle"></span>
+				<span th:text="#{listAdmParameterCategory.title}" id="formTitle"></span>
 			</div>
 			<div class="card-body">				
 				<div class="row">
@@ -37,7 +37,7 @@
 					<i class="fa fa-plus-circle"></i>
 				</span>
 				<span class="text" th:text="#{button.add}"></span>
-			</button>			
+			</button>
 			<button type="button" class="btn btn-warning" id="btnEdit">
 				<span class="icon text-white-50">
 					<i class="fa fa-chevron-circle-up"></i>
@@ -63,7 +63,7 @@
 		    <div class="modal-content">
 		      <div class="modal-header">
 		        <h5 class="modal-title" id="staticBackdropLabel"><span th:text="#{dlgDeleteConfirmation.title}"></span></h5>
-		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>		      
+		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>		        
 		      </div>
 		      <div class="modal-body">
 		        <p><span th:text="#{dlgDeleteConfirmation.text}" th:remove="tag"></span></p>
@@ -76,33 +76,30 @@
 		  </div>
 		</div>
 		
-		<input type="hidden" id="admPage_tableRowIndex" />
-		<input type="hidden" id="admPage_rowId" />
-		 
-		<table class="table table-striped table-bordered" id="tableAdmPage" style="width: 100%">
+		<input type="hidden" id="admParameterCategory_paginationNumber" th:value="${pagedBean.paging.pageNumber}" />
+		<th:block th:include="/fragments/panelPagination"></th:block>
+		
+		<table class="table table-sm table-striped table-bordered" id="tableAdmParameterCategory" style="width: 100%">
 		    <thead>
 		      <tr>
 		      	<th style="display: none" >Id</th>
-		        <th>Description</th>
-		        <th>Url</th>
+		        <th th:onclick="listAdmParameterCategory.tableHeaderColumnClick(this, 1, 'Description');">Description  <i class='fas fa-sort-alpha-up fa-sm'></i></th>
+		        <th th:onclick="listAdmParameterCategory.tableHeaderColumnClick(this, 2, 'Order');">Order  <i class='fas fa-sort-alpha-up fa-sm'></i></th>
 		      </tr>
 		    </thead>
 		    <tbody>
-		      <tr th:each="item : ${listBean}" th:onclick="'listAdmPage.tableRowClick(this, ' + ${item.id} + ');'">
+		      <tr th:each="item : ${pagedBean.page}" th:onclick="'listAdmParameterCategory.tableRowClick(this, ' + ${item.id} + ');'">		      	
 		      	<td style="display: none" th:text="${item.id}"></td>
 		        <td th:text="${item.description}"></td>
-		        <td th:text="${item.url}"></td>
+		        <td th:text="${item.order}"></td>
 		      </tr>
 		    </tbody>
-		  </table>	
-		
-		<br>
-		<br>
-		
+		  </table>		  		
+				
 	</form>
 
-<script th:src="@{/js/admin/admPage/listAdmPage.js}"></script>
-
+<script th:src="@{/js/admin/admParameterCategory/listAdmParameterCategory.js}"></script>
+ 
 <!-- =================================================================================== -->
 
 		</div>
