--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admProfile/editAdmProfile.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admProfile/editAdmProfile.html
@@ -10,7 +10,7 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formEditAdmProfile" action="#" th:action="@{/private/admProfileView}" method="post" th:object="${bean}">
+	<form id="formEditAdmProfile" action="#" th:action="@{/private/admin/admProfileView}" method="post" th:object="${bean}">
 	
 		<div class="card">
 			<div class="card-header" 
