--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admProfile/listAdmProfile.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admProfile/listAdmProfile.html
@@ -11,12 +11,12 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formListAdmParameter" action="#" th:action="@{/private/admParameterView/edit}" method="get" th:object="${bean}">
-	
+	<form id="formListAdmProfile" action="#" th:action="@{/private/admin/admProfileView/edit}" method="get" th:object="${bean}">
+		
 		<div class="card">
 			<div class="card-header" 
 				style="font-weight: bold;font-size: large;">				
-				<span th:text="#{listAdmParameter.title}" id="formTitle"></span>
+				<span th:text="#{listAdmProfile.title}" id="formTitle"></span>
 			</div>
 			<div class="card-body">				
 				<div class="row">
@@ -37,7 +37,7 @@
 					<i class="fa fa-plus-circle"></i>
 				</span>
 				<span class="text" th:text="#{button.add}"></span>
-			</button>
+			</button>			
 			<button type="button" class="btn btn-warning" id="btnEdit">
 				<span class="icon text-white-50">
 					<i class="fa fa-chevron-circle-up"></i>
@@ -63,7 +63,7 @@
 		    <div class="modal-content">
 		      <div class="modal-header">
 		        <h5 class="modal-title" id="staticBackdropLabel"><span th:text="#{dlgDeleteConfirmation.title}"></span></h5>
-		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>		      
 		      </div>
 		      <div class="modal-body">
 		        <p><span th:text="#{dlgDeleteConfirmation.text}" th:remove="tag"></span></p>
@@ -75,43 +75,37 @@
 		    </div>
 		  </div>
 		</div>
-		
-		<input type="hidden" id="admParameter_tableRowIndex" />
-		<input type="hidden" id="admParameter_rowId" />
-		
-		<table class="table table-striped table-bordered" id="tableAdmParameter" style="width: 100%">
+
+		<input type="hidden" id="admProfile_tableRowIndex" />
+		<input type="hidden" id="admProfile_rowId" />
+		 
+		<table class="table table-striped table-bordered" id="tableAdmProfile" style="width: 100%">
 		    <thead>
 		      <tr>
 		      	<th style="display: none" >Id</th>
-		        <th style="width: 200px;" >Parameter Category</th>
-		        <th>Parameter</th>
-		        <th>Value</th>
-		        <th>Description</th>
+		        <th style="width:25%">Description</th>
+		        <th>Users</th>
 		      </tr>
 		    </thead>
 		    <tbody>
-		      <tr th:each="item : ${listBean}" th:onclick="'listAdmParameter.tableRowClick(this, ' + ${item.id} + ');'">
+		      <tr th:each="item : ${listBean}" th:onclick="'listAdmProfile.tableRowClick(this, ' + ${item.id} + ');'">
 		      	<td style="display: none" th:text="${item.id}"></td>
-		        <td th:text="${item.admParameterCategory.description}"></td>
-		        <td th:text="${item.code}"></td>
-		        <td th:text="${item.value}"></td>
 		        <td th:text="${item.description}"></td>
+		        <td th:text="${item.admUsers}"></td>
 		      </tr>
 		    </tbody>
-		  </table>
-
-		<br>
-		<br>
+		  </table>	
 		
 	</form>
 
-<script th:src="@{/js/admin/admParameter/listAdmParameter.js}"></script>
+<script th:src="@{/js/admin/admProfile/listAdmProfile.js}"></script>
 
 <!-- =================================================================================== -->
 
 		</div>
 	</div>
 </div>
+
 <div class="overlay"></div>
 
 </body>
