--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admUser/editAdmUser.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admUser/editAdmUser.html
@@ -10,7 +10,7 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formEditAdmUser" action="#" th:action="@{/private/admUserView}" method="post" th:object="${bean}">
+	<form id="formEditAdmUser" action="#" th:action="@{/private/admin/admUserView}" method="post" th:object="${bean}">
 	
 		<div class="card">
 			<div class="card-header" 
