Pagination components works!

--- a/hefesto-spring-bootstrap/src/main/resources/static/css/system.css
+++ b/hefesto-spring-bootstrap/src/main/resources/static/css/system.css
@@ -1,9 +1,6 @@
-/*
-* {
-	font-size: 11px;
-	line-height: 1.428;	
+.selected {
+	background-color: lightblue;
 }
-*/
 
 .main-theme {
 	background-color: lightblue;
