--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admMenu/editAdmMenu.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admMenu/editAdmMenu.html
@@ -10,7 +10,8 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formEditAdmMenu" action="#" th:action="@{/private/admin/admMenuView}" method="post" th:object="${bean}">
+	<form id="formEditAdmMenu" style="padding: 5px;" action="#" 
+		th:action="@{/private/admin/admMenuView}" method="post" th:object="${bean}">
 	
 		<div class="card">
 			<div class="card-header" 
