--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admMenu/listAdmMenu.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admMenu/listAdmMenu.html
@@ -11,7 +11,8 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formListAdmMenu" action="#" th:action="@{/private/admin/admMenuView/edit}" method="get" th:object="${bean}">
+	<form id="formListAdmMenu" style="padding: 5px;" action="#" 
+		th:action="@{/private/admin/admMenuView/edit}" method="get" th:object="${bean}">
 		
 		<div class="card">
 			<div class="card-header" 
