--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admPage/editAdmPage.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admPage/editAdmPage.html
@@ -10,7 +10,8 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formEditAdmPage" action="#" th:action="@{/private/admin/admPageView}" method="post" th:object="${bean}">
+	<form id="formEditAdmPage" style="padding: 5px;" action="#" 
+		th:action="@{/private/admin/admPageView}" method="post" th:object="${bean}">
 	
 		<div class="card">
 			<div class="card-header" 
