--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admParameterCategory/editAdmParameterCategory.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admParameterCategory/editAdmParameterCategory.html
@@ -10,7 +10,7 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formEditAdmParameterCategory" style="padding-top: 10px;" action="#" 
+	<form id="formEditAdmParameterCategory" style="padding: 5px;" action="#" 
 		th:action="@{/private/admin/admParameterCategoryView}" method="post" th:object="${bean}">
 	
 		<div class="card">
