--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/changePassword.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/changePassword.html
@@ -10,8 +10,8 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formChangePassword" style="max-width: 650px; margin-top: 10px;"
-	 action="#" th:action="@{/private/admin/changePassword}" method="post" th:object="${userVO}">
+	<form id="formChangePassword" style="padding: 5px;" action="#" 
+		th:action="@{/private/admin/changePasswordEditView}" method="post" th:object="${userVO}">
 	 
 		<div class="card">
 			<div class="card-header" 
@@ -21,7 +21,7 @@
 			<div class="card-body">
 			
 				<div class="form-actions">
-					<button type="button" class="btn btn-success btn-icon-split" id="btnSave">
+					<button type="submit" class="btn btn-success btn-icon-split" id="btnSave">
 						<span class="icon text-white-50">
 							<i class="fa fa-check-circle"></i>
 						</span>
@@ -42,6 +42,23 @@
 						<span class="text" th:text="#{button.cancel}"></span>
 					</button>
 				</div>
+
+		        <div class="row">
+		            <p>As minimum requirements for user passwords, the following should be considered:</p>
+		            <ul>
+		                <li>Minimum length of 8 characters;</li>
+		                <li>Presence of at least 3 of the 4 character classes below:
+		                    <ul>
+		                        <li>uppercase characters;</li>
+		                        <li>lowercase characters;</li>
+		                        <li>numbers;</li>
+		                        <li>special characters;</li>
+		                        <li>Absence of strings (eg: 1234) or consecutive identical characters (yyyy);</li>
+		                        <li>Absence of any username identifier, such as: John Silva - user: john.silva - password cannot contain "john" or "silva".</li>
+		                    </ul>
+		                </li>
+		            </ul>
+		        </div>
 
 				<div class="row">
 					<div class="col-md-6 form-group mb-2">
