--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admProfile/listAdmProfile.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admin/admProfile/listAdmProfile.html
@@ -11,7 +11,8 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formListAdmProfile" action="#" th:action="@{/private/admin/admProfileView/edit}" method="get" th:object="${bean}">
+	<form id="formListAdmProfile" style="padding: 5px;" action="#" 
+		th:action="@{/private/admin/admProfileView/edit}" method="get" th:object="${bean}">
 		
 		<div class="card">
 			<div class="card-header" 
@@ -76,9 +77,6 @@
 		  </div>
 		</div>
 
-		<input type="hidden" id="admProfile_tableRowIndex" />
-		<input type="hidden" id="admProfile_rowId" />
-		 
 		<table class="table table-striped table-bordered" id="tableAdmProfile" style="width: 100%">
 		    <thead>
 		      <tr>
@@ -88,7 +86,7 @@
 		      </tr>
 		    </thead>
 		    <tbody>
-		      <tr th:each="item : ${listBean}" th:onclick="'listAdmProfile.tableRowClick(this, ' + ${item.id} + ');'">
+		      <tr th:each="item : ${listBean}" th:id="${item.id}" th:onclick="listAdmProfile.tableRowClick(this);">
 		      	<td style="display: none" th:text="${item.id}"></td>
 		        <td th:text="${item.description}"></td>
 		        <td th:text="${item.admUsers}"></td>
