--- a/hefesto-jakartaee/src/main/webapp/layout/layout.xhtml
+++ b/hefesto-jakartaee/src/main/webapp/layout/layout.xhtml
@@ -14,20 +14,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</f:facet>
 
-	<h:outputStylesheet name="primeicons/primeicons.css"
-		library="primefaces" />
+	<h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
+	
+	<h:outputStylesheet name="primeflex/primeflex.css" library="css" />	
 		
 	<link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/system.css" />
 
-	<h:outputScript name="js/jquery.js" />
 	<h:outputScript name="js/system.js" />
-	<h:outputScript name="js/jquery.meio.mask.min.js" />
-	<h:outputScript name="js/jquery.numeric.js" />
-	
-	<script type='text/javascript'>  
- 		var $jq = jQuery.noConflict(true);  
- 	</script>
- 	
+	 	
 	<ui:insert name="head" />
 	
 </h:head>
